// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    />
    <div>
      <div>
        <div
          class="t-anchor t-size-m"
        >
          <div
            class="t-anchor__line"
          >
            <div
              class="t-anchor__line-cursor-wrapper"
              style=""
            >
              <div
                class="t-anchor__line-cursor"
              />
            </div>
          </div>
          <div
            class="t-anchor__item"
          >
            <a
              class="t-anchor__item-link"
              href="#基础锚点"
              title="基础锚点"
            >
              基础锚点
            </a>
          </div>
          <div
            class="t-anchor__item"
          >
            <a
              class="t-anchor__item-link"
              href="#多级锚点"
              title="多级锚点"
            >
              多级锚点
            </a>
          </div>
          <div
            class="t-anchor__item"
          >
            <a
              class="t-anchor__item-link"
              href="#指定容器锚点"
              title="指定容器锚点"
            >
              指定容器锚点
            </a>
          </div>
          <div
            class="t-anchor__item"
          >
            <a
              class="t-anchor__item-link"
              href="#特定交互锚点"
              title="特定交互锚点"
            >
              特定交互锚点
            </a>
          </div>
          <div
            class="t-anchor__item"
          >
            <a
              class="t-anchor__item-link"
              href="#尺寸"
              title="尺寸"
            >
              尺寸
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`container.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo-attach"
    id="attach"
    style="display: flex;"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor__line"
      >
        <div
          class="t-anchor__line-cursor-wrapper"
          style="top: 0px; height: 0px; opacity: 1;"
        >
          <div
            class="t-anchor__line-cursor"
          />
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#content-1"
          title="content-1"
        >
          content-1
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#content-2"
          title="content-2"
        >
          content-2
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#content-3"
          title="content-3"
        >
          content-3
        </a>
      </div>
      <div
        class="t-anchor__item t-is-active"
      >
        <a
          class="t-anchor__item-link"
          href="#content-4"
          title="content-4"
        >
          content-4
        </a>
      </div>
    </div>
    <div
      id="anchor-container"
      style="width: 100%; height: 200px; overflow: auto; text-align: center; font-size: 22px;"
    >
      <div
        id="content-1"
        style="background: rgb(223, 239, 255); line-height: 100px;"
      >
        content-1
      </div>
      <div
        id="content-2"
        style="background: rgb(191, 219, 247); line-height: 100px;"
      >
        content-2
      </div>
      <div
        id="content-3"
        style="background: rgb(155, 197, 242); line-height: 100px;"
      >
        content-3
      </div>
      <div
        id="content-4"
        style="background: rgb(123, 175, 237); line-height: 100px;"
      >
        content-4
      </div>
      <div
        id="content-5"
        style="background: rgb(92, 153, 235); line-height: 100px;"
      >
        content-5
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`cursor.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor__line"
      >
        <div
          class="t-anchor__line-cursor-wrapper"
          style=""
        >
          <div
            style="width: 10px; height: 10px; background-color: rgb(0, 82, 217); position: absolute; border-radius: 50%; left: 50%; margin-left: -5px; top: 50%; margin-top: -5px;"
          />
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#基础锚点"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#多级锚点"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#指定容器锚点"
          title="指定容器锚点"
        >
          指定容器锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#特定交互锚点"
          title="特定交互锚点"
        >
          特定交互锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#尺寸"
          title="尺寸"
        >
          尺寸
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large.jsx 1`] = `
<DocumentFragment>
  <div
    id="size-large"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor__line"
      >
        <div
          class="t-anchor__line-cursor-wrapper"
          style="top: 0px; height: 0px; opacity: 1;"
        >
          <div
            class="t-anchor__line-cursor"
          />
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor__item t-is-active"
        >
          <a
            class="t-anchor__item-link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
        style=""
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#基础锚点"
        title="基础锚点"
      >
        基础锚点
      </a>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#多级锚点"
        title="多级锚点"
      >
        多级锚点
      </a>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#指定容器锚点"
        title="指定容器锚点"
      >
        指定容器锚点
      </a>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#特定交互锚点"
        title="特定交互锚点"
      >
        特定交互锚点
      </a>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#尺寸"
        title="尺寸"
      >
        尺寸
      </a>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#size"
          title="size-medium"
        >
          size-medium
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#size-large"
          title="size-large"
        >
          size-large
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small.jsx 1`] = `
<DocumentFragment>
  <div
    id="size"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor__line"
      >
        <div
          class="t-anchor__line-cursor-wrapper"
          style="top: 0px; height: 0px; opacity: 1;"
        >
          <div
            class="t-anchor__line-cursor"
          />
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor__item t-is-active"
      >
        <a
          class="t-anchor__item-link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor__item t-is-active"
        >
          <a
            class="t-anchor__item-link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor__item"
        >
          <a
            class="t-anchor__item-link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`target.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo"
    id="/components/anchor/#anchor-target"
  >
    <h1
      class="t-anchor__target"
      id="/components/anchor/#default"
    >
      基础锚点
      <div
        class="t-popup-reference"
      >
        <svg
          class="t-icon t-icon-file-copy t-anchor__copy"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </h1>
    <h1
      class="t-anchor__target"
      id="/components/anchor/#multiple"
    >
      多级锚点
      <div
        class="t-popup-reference"
      >
        <svg
          class="t-icon t-icon-file-copy t-anchor__copy"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </h1>
    <h1
      class="t-anchor__target"
      id="/components/anchor/#size"
    >
      尺寸大小
      <div
        class="t-popup-reference"
      >
        <svg
          class="t-icon t-icon-file-copy t-anchor__copy"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </h1>
    <h1
      class="t-anchor__target"
      id="/components/anchor/#attach"
    >
      指定容器
      <div
        class="t-popup-reference"
      >
        <svg
          class="t-icon t-icon-file-copy t-anchor__copy"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </h1>
  </div>
</DocumentFragment>
`;
